feat: added workspace-b

--- a/packages/workspace-b/package.json
+++ b/packages/workspace-b/package.json
@@ -1,4 +1,16 @@
 {
     "name": "workspace-b",
-    "version": "0.1.0"
+    "version": "0.1.0",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "watch": "webpack --watch",
+        "start": "webpack serve --open",
+        "build": "webpack"
+    },
+    "devDependencies": {
+        "html-webpack-plugin": "^5.3.1",
+        "webpack": "^5.38.1",
+        "webpack-cli": "^4.7.0",
+        "webpack-dev-server": "^3.11.2"
+    }
 }
