--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "monorepo",
   "private": true,
-  "scripts": {},
+  "scripts": {
+    "start": "yarn workspaces run start",
+    "serve": "wsrun --parallel start"
+  },
   "workspaces": [
     "packages/*"
   ],
