--- a/packages/workspace-a/package.json
+++ b/packages/workspace-a/package.json
@@ -7,6 +7,9 @@
         "start": "webpack serve --open",
         "build": "webpack"
     },
+    "dependencies": {
+        "useless-lib": "1.0.0"
+    },
     "devDependencies": {
         "html-webpack-plugin": "^5.3.1",
         "webpack": "^5.38.1",
