feat: added org to publish packages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monorepo",
+  "name": "programadores-anonimos-monorepo",
   "private": true,
   "scripts": {
     "lerna:add": "lerna add",
@@ -7,7 +7,7 @@
     "lerna:info": "lerna info",
     "lerna:list": "lerna list --graph --all",
     "lerna:publish": "lerna publish",
-    "lerna:scope": "lerna exec --scope 'workspace-a' -- yarn start",
+    "lerna:scope": "lerna exec --scope 'programadores-anonimos-workspace-a' -- yarn start",
     "single": "yarn workspaces run start",
     "start": "concurrently \"wsrun --parallel start\""
   },
