--- a/packages/workspace-a/package.json
+++ b/packages/workspace-a/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "workspace-a",
+    "name": "programadores-anonimos-workspace-a",
     "version": "0.1.0",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,5 +15,8 @@
         "webpack": "^5.38.1",
         "webpack-cli": "^4.7.0",
         "webpack-dev-server": "^3.11.2"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
