--- a/packages/workspace-b/package.json
+++ b/packages/workspace-b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "workspace-b",
+    "name": "programadores-anonimos-workspace-b",
     "version": "0.1.0",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,12 +9,15 @@
     },
     "dependencies": {
         "useless-lib": "3.0.0",
-        "workspace-a": "0.1.0"
+        "programadores-anonimos-workspace-a": "0.1.0"
     },
     "devDependencies": {
         "html-webpack-plugin": "^5.3.1",
         "webpack": "^5.38.1",
         "webpack-cli": "^4.7.0",
         "webpack-dev-server": "^3.11.2"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
